== Version 2.0.17 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Fix dialog title of entity filter details using "<" (backport 2.1)
    # Fix an issue when removing a file with inner edition (backport 2.1)

  Developers side :
  -----------------
    Non breaking changes :
    ----------------------
        # In javascript :
          - title property of creme.dialog.Dialog is now unescaped (see bug #64)

== Version 2.0.16 ==

  Users side :
  ------------
    # A deep-copy bug in 'creme_core.forms.header_filter.EntityCellsField' has been fixed ;
      it could cause issues with hidden fields when editing list-views views (HeaderFilters).
    # Values of decimal CustomFields are now localized in list-views.
    # The error message, when a definitive deletion fails, was partially broken.
    # In "About" page, information are retrieved from GIT instead of HG.
    # Apps :
        * Reports :
            - The export for some types of CustomField was broken (multi-enum) or not localized (datetime, bool, decimal).
            - Aggregates are now localized in exported reports.
        * Billing :
            - The orders of InvoiceStatus were not correct in populate script.


== Version 2.0.15 ==

  Users side :
  ------------
    # Apps :
        * Persons :
            - The blocks for detailed addresses have been fixed: they did not display fields since python3 migration.
        * Billing :
            - An encoding issue in PDF export, causing error 500 on some environments, has been fixed.
        * Crudity + emails :
            - The synchronisation of e-mails was broken (encoding errors notably).


== Version 2.0.14 ==

  UPGRADE NOTE :
    - The underlying version of Django (ie: 1.11) is not supported any more by the Django's team.
      You should upgrade to Creme 2.1 which uses Django 2.2 .

  Users side :
  ------------
    # Apps :
        * Documents :